# libmfcc

./: CMakeLists.txt  README.md  main.cpp
cmake/: libmfccConfig.cmake.in
include/: audio_buffer.h  audio_reader.h  frame.h  frame_extractor.h  mp3_audio_reader.h  wav_audio_reader.h  window_functiion.h
include/libmfcc/: config.h  libmfcc.h
include/libmfcc/audio/: audio_buffer.h  audio_reader.h  mp3_audio_reader.h  wav_audio_reader.h
include/libmfcc/compat/: source_location.h
include/libmfcc/dsp/: dft_transformer.h  fft_transformer.h  frame.h  frame_extractor.h  transformer.h  window_functiion.h
include/libmfcc/features/: delta.h  mfcc.h
include/libmfcc/utils/: path.h
src/: frame_exctractor.cpp  libmfcc.cpp  minimp3_impl.cpp  minimp3_single.cpp  mp3_audio_reader.cpp  wav_audio_reader.cpp  window_function.cpp
src/audio/: mp3_audio_reader.cpp  wav_audio_reader.cpp
src/dsp/: dft_transformer.cpp  fft_transformer.cpp  frame_exctractor.cpp  window_function.cpp
src/features/: delta.cpp  mfcc.cpp
tests/: CMakeLists.txt  mfcc_pipeline.cpp
